Fix letter spacing in safari ??

--- a/styles/index.css
+++ b/styles/index.css
@@ -2,6 +2,7 @@
   text-shadow: none !important;
   font-family: 'Itim', Arial, Helvetica, sans-serif !important;
   text-transform: lowercase !important;
+  font-weight: 400 !important;
 }
 
 body {
